# wsnet

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE  README.md
kernel/: CMakeLists.txt
kernel/include/: log.h  modelutils.h  options.h
kernel/include/configuration_parser/: class_configuration.h  environment_configuration.h  grouparch_configuration.h  medium_configuration.h  nodearch_configuration.h  param.h  simulation_configuration.h  xmlparser.h
kernel/include/data_structures/circular_array/: circ_array.h
kernel/include/data_structures/hashtable/: hashtable.h
kernel/include/data_structures/heap/: heap.h
kernel/include/data_structures/interval_tree/: interval_tree.h  redblack_interval_tree.h  redblack_interval_tree_element.h
kernel/include/data_structures/list/: list.h
kernel/include/data_structures/mem_fs/: mem_fs.h
kernel/include/data_structures/range_tree/: range_tree.h
kernel/include/data_structures/sliding_window/: sliding_window.h
kernel/include/definitions/: class.h  environment.h  field.h  group.h  grouparch.h  medium.h  models.h  node.h  nodearch.h  packet.h  simulation.h  types.h
kernel/include/model_handlers/: cxx_model_handlers.h  energy.h  interface.h  link.h  map.h  media_rxtx.h  model_handlers_dbg.h  modulation.h  monitor.h  node_mobility.h  noise.h  topology.h  transceiver.h
kernel/include/scheduler/: event.h  scheduler.h  scheduler_private.h  scheduler_standard_containers.h
kernel/src/: CMakeLists.txt  config_test.xml  main.c  modelutils.c
kernel/src/configuration_parser/: CMakeLists.txt  class_configuration.c  configuration.c  environment_configuration.c  grouparch_configuration.c  medium_configuration.c  nodearch_configuration.c  param.c  simulation_configuration.c
kernel/src/data_structures/: CMakeLists.txt
kernel/src/definitions/: CMakeLists.txt  class.c  environment.c  field.c  group.c  grouparch.c  medium.c  models.c  node.c  nodearch.c  packet.c  simulation.c
kernel/src/model_handlers/: CMakeLists.txt  energy.c  interface.c  link.c  map.c  media_rxtx.cc  modulation.c  monitor.c  node_mobility.c  noise.c  topology.c  transceiver.c
kernel/src/scheduler/: CMakeLists.txt  scheduler.cc  scheduler_standard_containers.cc
kernel/src/tools/: CMakeLists.txt
kernel/tests/: CMakeLists.txt
kernel/tests/unit/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/tests/: CMakeLists.txt
libraries/timer/: CMakeLists.txt  timer.c  timer.h
libraries/wiplan/: CMakeLists.txt  wiplan_parser.c  wiplan_parser.h
models/: CMakeLists.txt  models_dbg.h
models/application/bmac_app_sample/: CMakeLists.txt
models/application/cbr/: CMakeLists.txt
models/application/cbr_v2/: CMakeLists.txt
models/application/data_d/: CMakeLists.txt
models/application/demo/: CMakeLists.txt
models/application/dummy_application/: CMakeLists.txt
models/application/dynamic/: CMakeLists.txt
models/application/epidemic/: CMakeLists.txt
models/application/hello/: CMakeLists.txt
models/coding/none/: CMakeLists.txt
models/energy/dummy_energy/: CMakeLists.txt
models/energy/linear_battery/: CMakeLists.txt
models/error/none/: CMakeLists.txt
models/fading/: CMakeLists.txt
models/fading/mixed/: CMakeLists.txt
models/fading/nakagami_m/: CMakeLists.txt
models/fading/rayleigh/: CMakeLists.txt
models/global_map/basic/: CMakeLists.txt
models/interface/antenna_omnidirectionnal/: CMakeLists.txt
models/interference/none/: CMakeLists.txt
models/interference/rf_signal_interference/: CMakeLists.txt
models/interferences/factor/: CMakeLists.txt
models/interferences/factor_multichannel/: CMakeLists.txt
models/interferences/orthogonal/: CMakeLists.txt
models/intermodulation/intermodulation/: CMakeLists.txt
models/link/dummy_link/: CMakeLists.txt
models/link/indoor/: CMakeLists.txt
models/mac/: CMakeLists.txt
models/mac/802_15_4_u_csma_ca/: CMakeLists.txt
models/mac/bmac/: CMakeLists.txt
models/mac/dcf_802_11/: CMakeLists.txt
models/mac/idealmac/: CMakeLists.txt
models/mac/xmac/: CMakeLists.txt
models/map/dummy_map/: CMakeLists.txt
models/map/indoor/: CMakeLists.txt
models/mobility/: wiplanout.xml
models/mobility/billiard/: CMakeLists.txt
models/mobility/dummy_mobility/: CMakeLists.txt
models/mobility/position_inside_room/: CMakeLists.txt
models/mobility/static/: CMakeLists.txt
models/mobility/static_wiplan/: CMakeLists.txt
models/mobility/teleport/: CMakeLists.txt
models/mobility/torus_central/: CMakeLists.txt
models/mobility/torus_plane/: CMakeLists.txt
models/modulations/bpsk/: CMakeLists.txt
models/modulations/classic_oqpsk/: CMakeLists.txt
models/modulations/fsk/: CMakeLists.txt
models/modulations/mqam/: CMakeLists.txt
models/modulations/none/: CMakeLists.txt
models/modulations/oqpsk/: CMakeLists.txt
models/modulations/step/: CMakeLists.txt
models/modulator/none/: CMakeLists.txt
models/monitor/dummy_monitor/: CMakeLists.txt
models/noise/white/: CMakeLists.txt
models/pathloss/cost231/: CMakeLists.txt
models/pathloss/filestatic/: CMakeLists.txt
models/pathloss/freespace/: CMakeLists.txt
models/pathloss/itu_indoor/: CMakeLists.txt
models/pathloss/mixed/: CMakeLists.txt
models/pathloss/pathloss_wiplan/: CMakeLists.txt
models/pathloss/range/: CMakeLists.txt
models/pathloss/tworayground/: CMakeLists.txt
models/phy/rf_signal_adjacent_band/: CMakeLists.txt
models/physical/dummy_physical/: CMakeLists.txt
models/routing/aodv/: CMakeLists.txt
models/routing/direct_diffusion/: CMakeLists.txt
models/routing/geostatic/: CMakeLists.txt
models/routing/greedy/: CMakeLists.txt
models/sensor/dummy_sensor/: CMakeLists.txt
models/shadowing/lognormal/: CMakeLists.txt
models/shadowing/mixed/: CMakeLists.txt
models/signal_tracker/pick_first_rf/: CMakeLists.txt
models/spectrum/multiband_rf/: CMakeLists.txt
models/transceiver/radio_802_15_4/: CMakeLists.txt
models/transceiver/radio_half1d/: CMakeLists.txt
models/transceiver/radio_half1d_Wifi/: CMakeLists.txt
models/transceiver/radio_halfduplex_spectrum/: CMakeLists.txt
(+342 files in other folders)
