#------------------------------------------------------------------------------
# CMake file for global tests of WSNET
#
# Author: Luiz Henrique Suraty Filho
# ------------------------------------------------------------------------------

# -----------------------------------------------------------------------------
# Add subdirtests
# -----------------------------------------------------------------------------
add_subdirectory(unit)

# -----------------------------------------------------------------------------
# Add the cppcheck tests
# -----------------------------------------------------------------------------
wsnet_add_cppcheck_tests("kernel" "${WSNET_SRC_PATH}/kernel")
